upgrade page template

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -135,7 +135,7 @@ layout: base
               {%- include main/bottom/custom.html -%}
             </div>
             
-            {%- include scroll-to-top.html -%}
+            {%- include snippets/scroll-to-top.html -%}
           </div>
 
       {%- if _full_width == false -%}
