adjust sharing style

--- a/_sass/sharing.scss
+++ b/_sass/sharing.scss
@@ -5,7 +5,7 @@
 .post-options {
   display: flex;
   align-items: flex-start;
-  margin-right: 20px;
+  margin-top: 10px;
 
   .share-section {
     display: flex;
