--- a/_sass/layout/_404.scss
+++ b/_sass/layout/_404.scss
@@ -1,16 +1,28 @@
 .layout--404 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
   .sign {
-    display: table;
-    margin: map-get($spacers, 4) auto;
-    margin-top: map-get($spacers, 5);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 20px;
 
-    h1 {
-      font-size: map-get($base, font-size-xl) * 4;
-      line-height: 1;
+    img {
+      width: 50px;
+      height: 50px;
     }
+  }
+}
 
-    p {
-      font-size: map-get($base, font-size-xl) * 1.2;
-    }
+.error--image {
+  margin-left: 20px;
+
+  img {
+    width: 400px;
+    height: 400px;
   }
 }
