Fixed resource loading issues

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-<!-- 动态标题 -->
 {%- include snippets/get-article-title.html article=page -%}
 <title>
   {%- if __return -%}
@@ -12,27 +11,25 @@
   {%- endif -%}
 </title>
 
-<!-- 用于 SEO 的页面描述，显示该页面的摘要信息(剔除html标签和换行符并截断至160字) -->
-<meta name="description" content="{%- if page.excerpt -%}{{ page.excerpt | strip_html | strip_newlines | strip | truncate: 160 }}{%- else -%}{{ site.description }}{%- endif -%}" />
-
+{% comment %} 用于 SEO 的页面描述，显示该页面的摘要信息(剔除html标签和换行符并截断至160字) {% endcomment %}
+{%- if page.excerpt -%}
+  {{ _result = page.excerpt | strip_html | strip_newlines | strip | truncate: 160 }}
+{%- else -%}
+  {{ _result = site.description }}
+{%- endif -%}
+<meta name="description" content={{ _result }} />
 <link rel="canonical" href="{%- include snippets/page-url.html -%}" />
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-<!-- RSS订阅连接 -->
 {%- assign _paths_rss = site.paths.rss | default: site.data.variables.default.paths.rss -%}
 {%- include snippets/get-nav-url.html path=_paths_rss -%}
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ __return }}" />
 
-<!-- 引入favicon和css样式 -->
 {%- include head/favicon.html -%}
 {%- include snippets/prepend-baseurl.html path='/assets/css/main.css' -%}
 <link rel="stylesheet" href="{{ __return }}" />
 
-<!-- 导入各类资源(详见variables.sources) -->
 {%- include snippets/get-sources.html -%}
 {%- assign _sources = __return -%}
 <link rel="stylesheet" href="{{ _sources.font_awesome }}" />
 
-<!-- 自定义头 -->
 {%- include head/custom.html -%}
