add appreciate programme

--- a/_includes/article/top/custom.html
+++ b/_includes/article/top/custom.html
@@ -2,6 +2,7 @@
 
 <div class="post-options">
   {%- include snippets/sharing-to-media.html -%}
+  {%- include snippets/appreciate.html -%}
   {%- include snippets/multimedia.html -%}
 </div>
 
