--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -63,8 +63,11 @@
 
     "custom",
     "donate",
-    "sharing",
+    "sharing-to-media",
+    "multimedia",
+    "appreciate",
     "scroll-to-top",
     "clipboard",
-    "email"
+    "email",
+    "article-top"
 ;
