--- a/_sass/donate.scss
+++ b/_sass/donate.scss
@@ -2,7 +2,7 @@
 
 .payment-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 20px;
 
@@ -13,12 +13,6 @@
     img {
       height: 150px;
       width: auto;
-    }
-
-    p {
-      margin-bottom: 10px;
-      font-size: 16px;
-      font-weight: bold;
     }
   }
 }
