--- a/_includes/extensions/bilibili.html
+++ b/_includes/extensions/bilibili.html
@@ -1,6 +1,6 @@
 <div class="extensions extensions--video">
   <iframe
-    src="//player.bilibili.com/player.html?aid={{ include.id }}&page=1"
+    src="//player.bilibili.com/player.html?bvid={{ include.id }}&page=1"
     frameborder="no"
     scrolling="no"
     allowfullscreen="true"
