--- a/_includes/markdown-enhancements/mermaid.html
+++ b/_includes/markdown-enhancements/mermaid.html
@@ -1,11 +1,7 @@
 {%- include snippets/get-sources.html -%}
 {%- assign _sources = __return -%}
 
-<script>
-  window.Lazyload.js('{{ _sources.mermaid }}', function () {
-    mermaid.initialize({
-      startOnLoad: true,
-    });
-    mermaid.init(undefined, '.language-mermaid');
-  });
+<script type="module">
+  import mermaid from '{{ _sources.mermaid }}';
+  mermaid.initialize({ startOnLoad: true });
 </script>
