--- a/_includes/article/footer/author-profile.html
+++ b/_includes/article/footer/author-profile.html
@@ -1,3 +1,4 @@
+{%- comment -%} 引用文件：_includes/author-footer {%- endcomment -%}
 {%- assign _author = include.author -%}
 
 <div itemscope itemtype="http://schema.org/Person" class="author-profile card card--flat item">
