--- a/_includes/article/footer/license.html
+++ b/_includes/article/footer/license.html
@@ -1,3 +1,4 @@
+{%- comment -%} 引用文件：article-footer {%- endcomment -%}
 {%- include snippets/get-locale-string.html key='LICENSE_ANNOUNCE' -%}
 {%- assign _license_announce = __return -%}
 
