--- a/_includes/read-time.html
+++ b/_includes/read-time.html
@@ -23,19 +23,15 @@
   {%- assign read_time = min_time -%}
 {%- endunless -%}
 
-{%- capture read_prompt -%}
-  {%- include snippets/get-locale-string.html key='PROMPT' -%}
-{%- endcapture -%}
-
 {%- if include.layout == "article" -%}
   {%- if include.show_label -%}
     <span class="readtime" data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{ words }} {{ _words  }}">
       {{ _prompt }}<em>{{- read_time -}}</em>{{ _unit }}
       
       {%- if include.prompt -%}
-        {% assign _prompt_words = read_prompt | strip_newlines | split: "" | size %}
+        {% assign _prompt_words = _prompt | strip_newlines | split: "" | size %}
         {%- unless _prompt_words > 1 -%}{{ ' ' }}{%- endunless -%}
-        {{ read_prompt }}
+        {{ _prompt }}
       {%- endif -%}
     </span>
   {%- endif -%}
