--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -44,20 +44,6 @@ blockquote {
   @include prompt("danger", "\f071");
 }
 
-/* 适配小尺寸设备 */
-@media all and (max-width: 576px) {
-  main {
-    .content {
-      > blockquote[class^="prompt-"] {
-        @include ml-mr(-1rem);
-
-        border-radius: 0;
-        max-width: none;
-      }
-    }
-  }
-}
-
 .box-info {
   @include colorbox(
     var(--prompt-info-icon-color),
@@ -98,7 +84,14 @@ blockquote {
 details {
   border-radius: 0.25rem;
   box-shadow: var(--language-border-color) 1px 1px 2px 1px; //借用了代码框的边框颜色变量
-  font-family: "Georgia", serif;
+  font-family: (
+    "Times New Roman",
+    "SimSun",
+    "Segoe UI",
+    Helvetica,
+    Arial,
+    sans-serif
+  );
   margin-bottom: 1rem;
   padding: 0.6rem 1rem 0.6rem 1.5rem;
 
@@ -116,10 +109,6 @@ details {
     text-decoration: none; //去除下划线
 
     &::before {
-      /* 关闭状态下 */
-      /* 也可以用其他符号或自定义图标，比如 Unicode 字符 */
-      // content: '🙈';
-      // content:'\002B9A';
       margin-right: 0.5rem;
       display: inline-block;
     }
@@ -140,69 +129,19 @@ details {
       margin-bottom: 0.6rem; // 展开会有动画效果
     }
 
-    &::before {
-      /* 展开状态下 */
-      // content: '🐵';
-      // content: '\002B9B';
-      animation: my-cat 0.2s ease-in-out; //点击会有动画效果
+    > summary::before {
       margin-right: 0.5rem;
     }
 
-    &::after {
+    > summary::after {
       transform: rotate(90deg);
     }
   }
-}
 
-details > summary::-webkit-details-marker {
-  display: none; //隐藏默认的箭头
-}
-
-details > summary::marker {
-  content: none; //隐藏默认的内容
-}
-
-/* 动画效果代码 */
-@keyframes my-cat {
-  50% {
-    transform: scale(1.3);
-  }
-}
-
-.details-definition {
-  border-left: 0.2rem solid var(--prompt-tip-icon-color);
-
-  > summary {
-    background-color: var(--prompt-tip-bg);
-    color: var(--prompt-tip-icon-color);
-  }
-}
-
-.details-theorem {
-  border-left: 0.2rem solid var(--prompt-warning-icon-color);
-
-  > summary {
-    background-color: var(--prompt-warning-bg);
-    color: var(--prompt-warning-icon-color);
-  }
-}
-
-.details-proposition {
-  border-left: 0.2rem solid var(--prompt-info-icon-color);
-
-  > summary {
-    background-color: var(--prompt-info-bg);
-    color: var(--prompt-info-icon-color);
-  }
-}
-
-.details-example {
-  border-left: 0.2rem solid var(--prompt-danger-icon-color);
-
-  > summary {
-    background-color: var(--prompt-danger-bg);
-    color: var(--prompt-danger-icon-color);
-  }
+  @include details("definition", "tip");
+  @include details("theorem", "warning");
+  @include details("proposition", "info");
+  @include details("example", "danger");
 }
 
 .table-wrapper {
@@ -216,6 +155,7 @@ details > summary::marker {
 
     thead {
       border-bottom: solid 2px rgba(210, 215, 217, 0.75);
+      text-align: center;
 
       th {
         @extend %table-cell;
